Bug 165295 - REPORTBUILDER - Report builder freezes when creating a report
Summary: REPORTBUILDER - Report builder freezes when creating a report
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-17 15:20 UTC by Adam664
Modified: 2025-02-18 03:45 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample Database doc to with one table (3.33 KB, application/vnd.oasis.opendocument.database)
2025-02-17 15:23 UTC, Adam664
Details
Screen shot of Report builder freezing (69.67 KB, image/png)
2025-02-17 15:25 UTC, Adam664
Details
Screen shot of Report Wizard stuck loading (73.35 KB, image/png)
2025-02-18 03:41 UTC, Adam664
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Adam664 2025-02-17 15:20:36 UTC
Description:
Report Builder freezes when trying to build a Report using either the Report wizard or the Report designer.

Steps to Reproduce:
1. Open a base document(sample provided for convenience, but you can also create one and get the same results)
2. Click on "Reports"
3. Click on "Report in Design View" or "Use Wizard to Create Report"

Actual Results:
LibreOffice freezes

Expected Results:
The Report Builder populates and LibreOffice doesn't freeze


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f4cf9971ceaf72a630fe1d1dd8154326daca9832
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Adam664 2025-02-17 15:23:52 UTC
Created attachment 199246 [details]
Sample Database doc to with one table
Comment 2 Adam664 2025-02-17 15:25:13 UTC
Created attachment 199247 [details]
Screen shot of Report builder freezing
Comment 3 Xisco Faulí 2025-02-17 15:47:53 UTC
Regression introduced by

commit a1a3fd98dcb3c9336eeaffe1d9def7c3ca8c699b	[log]
author	Caolán McNamara <caolan.mcnamara@collabora.com>	Sun Nov 17 19:48:42 2024 +0000
committer	Stephan Bergmann <stephan.bergmann@allotropia.de>	Fri Jan 17 09:34:24 2025 +0100
tree a24ed91e38a5f193ff2a0c14c3958abd6f57c4b3
parent b9464eadfc39c93f7c8beb04dc0d2b94b3a2e841 [diff]

cid#1555986 Check of thread-shared field evades lock acquisition

Bisected with: linux64-25.8
Comment 4 Caolán McNamara 2025-02-17 19:53:40 UTC
#25
  in cppuhelper/source/implbase_ex.cxx
  getTypeEntries( class_data * cd )
    std::scoped_lock guard( aMutex );
    Type const & rType = (*pEntry->m_type.getCppuType)( nullptr )

#5
  in cppuhelper/source/implbase_ex.cxx
  getTypeEntries( class_data * cd )

so this ends up holding the mutex while it gets called again, which is unfortunate.

Lets just revert those getTypeEntries changes then with https://gerrit.libreoffice.org/c/core/+/181799
Comment 5 Commit Notification 2025-02-17 21:11:15 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7a283ee5540e42662b723ac08d3ea1a0e454045e

Resolves: tdf#165295 partial cid#1555986 lock acquisition evasion revert

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Adam664 2025-02-18 03:41:47 UTC
Created attachment 199266 [details]
Screen shot of Report Wizard stuck loading
Comment 7 Adam664 2025-02-18 03:45:51 UTC
Confirming that using "Report in Design View" now works, thank you Caolán!

Unfortunately now the "Report Wizard" gets stuck loading, see attachment for example.