Resolves: tdf#165295 partial cid#1555986 lock acquisition evasion revert

seeing as getTypeEntries can be reentrant

Change-Id: Ice119e2a48d4912722a35843bd1c5078805249bd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181799
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins