cppuhelper/source/implbase_ex.cxx
@@ -64,6 +64,7 @@ static bool td_equals(
 static type_entry * getTypeEntries( class_data * cd )
 {
     type_entry * pEntries = cd->m_typeEntries;
+    if (! cd->m_storedTypeRefs) // not inited?
     {
         static std::mutex aMutex;
         std::scoped_lock guard( aMutex );
@@ -85,8 +86,13 @@ static type_entry * getTypeEntries( class_data * cd )
                 // ref is statically held by getCppuType()
                 pEntry->m_type.typeRef = rType.getTypeLibType();
             }
+            OSL_DOUBLE_CHECKED_LOCKING_MEMORY_BARRIER();
             cd->m_storedTypeRefs = true;
         }
+    }
+    else
+    {
+        OSL_DOUBLE_CHECKED_LOCKING_MEMORY_BARRIER();
     }
     return pEntries;
 }
